# jlibdeflate

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml  publish-snapshot.yml  release.yml
native/: CMakeLists.txt  jlibdeflate.c
src/main/java/com/fulcrumgenomics/jlibdeflate/: DecompressionResult.java  LibdeflateBenchmark.java  LibdeflateChecksum.java  LibdeflateCompressor.java  LibdeflateDecompressor.java  LibdeflateException.java  Main.java  NativeLoader.java
src/main/java/com/fulcrumgenomics/jlibdeflate/stream/: Bgzf.java  BgzfInputStream.java  BgzfOutputStream.java
src/test/java/com/fulcrumgenomics/jlibdeflate/: LibdeflateChecksumTest.java  LibdeflateCompressorTest.java  LibdeflateDecompressorTest.java
src/test/java/com/fulcrumgenomics/jlibdeflate/stream/: StreamTests.java
